# cli-notes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO.md  README.md  go.mod  go.sum  pyproject.toml
.DEVNOTES/: CONTRIBUTING.md  DEMO.md  DEVELOPMENT.md  MEMORY.md  README.md  TASKS.md
.github/workflows/: ci.yml  search-index-benchmarks.yml
cli_notes/: __init__.py  app.py
cmd/notes/: main.go
docs/: DEVELOPMENT.md
internal/app/: clipboard.go  constants.go  drafts.go  editor_highlight.go  editor_history.go  editor_history_test.go  editor_mouse.go  editor_mouse_test.go  editor_selection.go  file_time_darwin.go  file_time_linux.go  file_time_linux_test.go  file_time_other.go  file_time_unix.go  footer_layout_test.go  frontmatter.go  frontmatter_test.go  git.go  git_test.go  key_handlers.go  key_handlers_test.go  keybindings.go  keybindings_test.go  layout.go  logging.go  message_handlers.go  message_handlers_test.go  metrics.go  metrics_test.go  model.go  mutations.go  mutations_test.go  navigation_features_test.go  notes.go  notes_test.go  overlay.go  overlay_test.go  popups.go  render.go  render_test.go  (+27 more)
internal/config/: config.go  config_filesystem_test.go  config_test.go
internal/logging/: logging.go  logging_test.go
scripts/ci/: compare_search_bench.go
tests/: test_app.py
