[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-notes"
version = "0.1.0"
description = "A notes application that lives in your CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Trey Kane"}
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
notes = "cli_notes.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
